fix: remove gaps

--- a/src/plugins/widgets/bitcoin/Bitcoin.sass
+++ b/src/plugins/widgets/bitcoin/Bitcoin.sass
@@ -20,7 +20,7 @@
             width: 5.24em
             height: 1.196em
             position: absolute
-            top: -1.196em
+            top: -1.195em
             left: -1em
             background: #232838
             transform: skew(40deg)
@@ -32,7 +32,7 @@
             height: 5.24em
             position: absolute
             top: -0.6em
-            left: -1em
+            left: -0.99em
             background: #191c27
             transform: skewY(50deg)
             transform-origin: top
